package com.example.merchtools.domain.model

data class Photo(
    val auditItemId: Long,
    val uri: String,
    val createdAt: Long
)
